website/websites/u32/code/knucleotide.1.scala.log

Tue, 11 Nov 2008 02:23:37 GMT

MAKE:
mv knucleotide.scala knucleotide.scala
mv: `knucleotide.scala' and `knucleotide.scala' are the same file
make: [knucleotide.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.7.2.final/bin/scalac -optimise knucleotide.scala
knucleotide.scala:98: error: type mismatch;
 found   : scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
 required: HashBag.this.Entry
         if (elemEquals(entryKey(bucket), elem)){
                                 ^
knucleotide.scala:99: error: value inc is not a member of scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
            bucket.inc
                   ^
knucleotide.scala:110: error: type mismatch;
 found   : scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
 required: HashBag.this.Entry
         if (elemEquals(entryKey(bucket), elem)){
                                 ^
knucleotide.scala:111: error: value value is not a member of scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
            return bucket.value
                          ^
four errors found
make: [knucleotide.scala_run] Error 1 (ignored)
1.95s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/scala-2.7.2.final/bin/scala -howtorun object knucleotide 0 < knucleotide-input50000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:
java.lang.ClassNotFoundException: knucleotide
